[package]
name = "reverse_endian"
version = "0.1.0"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reverse_endian_derive = { version = "0.1.0", optional = true, path = "../reverse_endian_derive" }

[features]
derive = ["reverse_endian_derive"]
