[package]
name = "reverse_endian_derive"
version = "0.1.0"
authors = ["Michael Yang <mikkyangg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "reverse_endian_derive"
proc-macro = true

[dependencies]
proc = "0.1"
quote = "1.0"
syn = "1.0"
